# neurolight-workbench

./: .coverage  .gitignore  .pre-commit-config.yaml  BUILD.md  BUILD_OPTIMIZATIONS.md  CONTRIBUTING.md  README.md  build-macos-app.sh  build-macos-dmg.sh  build-macos-pkg.sh  cliff.toml  codecov.yml  coverage.xml  mkdocs.yml  neurolight.spec  pyproject.toml
.github/: dependabot.yml  labeler.yml
.github/workflows/: cd.yml  changelog.yml  ci.yml  docs.yml  labeler.yml
docs/: gen_ref_pages.py  index.md
docs/api/: core.md  ui.md  utils.md
docs/development/: contributing.md  setup.md  testing.md
docs/user-guide/: experiment-workflow.md  getting-started.md
src/: main.py
src/core/: alignment_mp.py  circular_stats.py  data_analyzer.py  experiment_manager.py  gif_generator.py  image_processor.py  lomb_scargle.py  roi.py
src/ui/: alignment_dialog.py  alignment_progress_dialog.py  alignment_worker.py  analysis_panel.py  app_settings.py  constants.py  detection_progress_dialog.py  detection_worker.py  draggable_spinbox.py  image_viewer.py  loading_dialog.py  lomb_scargle_plot.py  main_window.py  neuron_detection_widget.py  neuron_trajectory_plot.py  rayleigh_plot.py  roi_intensity_plot.py  roi_selection_dialog.py  settings_dialog.py  startup_dialog.py  styles.py  user_selection_dialog.py  workflow.py
src/utils/: file_handler.py  image_utils.py
tests/: conftest.py  test_alignment_dialog.py  test_alignment_mp.py  test_alignment_progress_dialog.py  test_alignment_worker.py  test_analysis_panel.py  test_app_settings.py  test_circular_stats.py  test_data_analyzer.py  test_detection_progress_dialog.py  test_detection_worker.py  test_draggable_spinbox.py  test_experiment_manager.py  test_experiment_persistence.py  test_file_handler.py  test_gif_generator.py  test_image_processor.py  test_image_stack_handler.py  test_image_utils.py  test_image_viewer_culling.py  test_loading_dialog.py  test_lomb_scargle_core.py  test_lomb_scargle_plot_widget.py  test_main_window_close_exit.py  test_main_window_culling.py  test_main_window_time_dialogs.py  test_main_window_time_flow.py  test_main_window_time_helpers.py  test_neuron_detection_widget.py  test_neuron_trajectory_plot.py  test_roi_geometry.py  test_roi_intensity_plot.py  test_settings_dialog.py  test_startup_dialog.py  test_workflow.py
