[project]
name = "neurolight-prototype"
version = "1.0.0"
description = "A powerful PySide6 desktop application for processing and analyzing large TIF image stacks with scientific rigor"
requires-python = ">=3.9"
dependencies = [
    "PySide6>=6.6.0",
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
    "ultralytics>=8.0.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "matplotlib>=3.8.0",
    "statsmodels>=0.14.0",
    "imageio>=2.31.0",
    "pystackreg>=0.2.8",
    "tifffile>=2023.1.0",
    "scikit-image>=0.21.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0.0", "pytest-cov>=4.0.0"]
dev = ["ruff>=0.1.0", "mypy>=1.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["F", "E", "I"]
ignore = []
exclude = [".venv", "build", "dist"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

