[project]
name = "neurolight-prototype"
dynamic = ["version"]
description = "A powerful PySide6 desktop application for processing and analyzing large TIF image stacks with scientific rigor"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6.0",
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "matplotlib>=3.8.0",
    "statsmodels>=0.14.0",
    "imageio>=2.31.0",
    "pystackreg>=0.2.8",
    "tifffile>=2023.1.0",
    "scikit-image>=0.21.0",
]

[project.scripts]
neurolight = "src.main:main"

[project.optional-dependencies]
test = ["pytest>=7.0.0", "pytest-cov>=4.0.0"]
dev = ["mypy>=1.0.0", "ruff>=0.1.0"]
build = ["pyinstaller>=6.0.0"]

[build-system]
requires = ["hatchling", "versioningit"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "versioningit"
default-version = "1.0.0+unknown"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["F", "E", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

